--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "cz-conventional-changelog": "^3.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "commit": "git-cz"
   },
   "keywords": [],
   "author": "",
