--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git-cz"
   },
-  "keywords": [],
+  "keywords": [ "miniprogram", "微信小程序", "点餐系统", "扫码点餐" ],
   "author": "",
   "license": "ISC",
   "description": "",
